ingress/basicauth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basicauth-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  rules:
  - host: www4.leo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: onesvc-service
            port: 
              number: 80
