ingress/onesvc-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onesvc-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: onesvc-nginx
  template:
    metadata:
      labels:
        app: onesvc-nginx
    spec:
      containers:
      - name: onesvc-nginx-container
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: onesvc-service
spec:
  selector:
    app: onesvc-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onesvc-ingress
spec:
  rules:
  - host: www.leo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: onesvc-service
            port: 
              number: 80
